Fix Google OAuth redirect URIs

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 # Google OAuth
 VITE_GOOGLE_CLIENT_ID=22789336376-085cbibt36ungbkk3k57e5r8jfgrqh8b.apps.googleusercontent.com
+GOOGLE_CALLBACK_URL=https://createnewone-inc.github.io/fastlife/auth/google/callback
