--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,21 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# 環境変数
+.env
+.env.local
+.env.development.local
+.env.production.local
+
+# ビルドファイル
+/client/dist/
+
+# IDE
+.idea/
+.vscode/
+*.sublime-project
+*.sublime-workspace
+
+# OS関連
+Thumbs.db
