--- a/package.json
+++ b/package.json
@@ -1,25 +1,20 @@
 {
-  "name": "mobile-app",
-  "private": true,
-  "version": "0.0.0",
+  "name": "fastlife",
+  "version": "1.0.0",
+  "description": "FastLifeアプリケーション - ファスティング管理Webアプリ",
+  "main": "server/src/index.js",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "start": "node server/src/index.js",
+    "server": "cd server && nodemon src/index.js",
+    "client": "cd client && npm run dev",
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "build": "cd client && npm run build",
+    "heroku-postbuild": "npm install --prefix client && npm run build --prefix client && npm install --prefix server"
+  },
+  "engines": {
+    "node": ">=14.0.0"
   },
   "dependencies": {
-    "@react-oauth/google": "^0.12.1",
-    "chart.js": "^4.4.8",
-    "jwt-decode": "^4.0.0",
-    "react": "^18.2.0",
-    "react-chartjs-2": "^5.3.0",
-    "react-dom": "^18.2.0"
-  },
-  "devDependencies": {
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.0",
-    "@vitejs/plugin-react": "^4.0.0",
-    "gh-pages": "^6.3.0",
-    "vite": "^4.4.0"
+    "concurrently": "^8.2.1"
   }
 }
