--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "client": "cd client && npm run dev",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "build": "cd client && npm run build",
-    "heroku-postbuild": "npm install --prefix client && npm run build --prefix client && npm install --prefix server"
+    "heroku-postbuild": "npm install --prefix client && npm run build --prefix client && npm install --prefix server",
+    "install-all": "npm install && npm install --prefix client && npm install --prefix server"
   },
   "engines": {
-    "node": ">=14.0.0"
+    "node": "18.x"
   },
   "dependencies": {
     "concurrently": "^8.2.1"
