--- a/client/package.json
+++ b/client/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "mobile-app",
+  "name": "fastlife-client",
   "private": true,
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "lint": "eslint . --ext js,jsx,ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -18,8 +19,8 @@
   "devDependencies": {
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
-    "@vitejs/plugin-react": "^4.0.0",
+    "@vitejs/plugin-react": "^4.3.4",
     "gh-pages": "^6.3.0",
-    "vite": "^4.4.0"
+    "vite": "^4.5.11"
   }
 }
