--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "node": "18.x"
   },
   "dependencies": {
+    "@types/react-router-dom": "^5.3.3",
     "concurrently": "^8.2.1",
     "react-router-dom": "^7.4.1"
   }
